# sphradiometer

./: .gitignore  00init.sh  INSTALL.md  Makefile.am  README.dstratma  README.md  README.txt  acinclude.m4  configure.ac  sphradiometer.spec.in
debian/: Makefile.am  changelog  control.in  libsphradiometer-dev.install  python3-sphradiometer.install  rules  sphradiometer.install
src/: Makefile.am
src/include/: Makefile.am
src/include/radiometer/: correlator.h  deconvolution.h  inject.h  instrument.h  projection.h  sky.h
src/include/sphradiometer/: Makefile.am  correlator.h  deconvolution.h  diagnostics.h  inject.h  inspiral_sky_map.h  instrument.h  math.h  projection.h  sh_series.h  sky.h
src/lib/: Makefile.am  bicubic.c  correlator.c  deconvolution.c  diagnostics.c  gsl_spline2d.h  inject.c  inspiral_sky_map.c  instrument.c  interp2d.c  projection.c  radiometer.pc.in  sh_series.c  sh_series_array.c  sh_series_deriv.c  sh_series_extremize.c  sh_series_healpix.cc  sh_series_io.c  sh_series_product.c  sh_series_rotation.c  sh_series_trans.c  sky.c  sphradiometer.pc.in  spline2d.c
src/matlab/: Makefile.am  matlabcross.c
src/python/: Makefile.am  RapidLocalization.py  __init__.py  healpix.py  ioutils.py  plotutils.py  radiometer.swig  sphradiometer.i  wrap_alm_skys_list.c
src/test/: runme.sh
test/: Makefile.am  correlator_validate.c  deriv_validate.c  extremize_validate.c  gsl_validate.c  healpy_validate  healpy_validate.py  make_movie.sh  plottests  product_validate.c  rotation_validate.c  s2kit_validate.c  sh_series_io_validate.c  sh_series_validate.c  tests.c
test/arxiv/: runtests.sh
